--- a/.gitignore
+++ b/.gitignore
@@ -158,6 +158,7 @@ cython_debug/
 .DS_Store
 config.py
 *.csv
+*.txt
 
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
